Added footer section.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <article>
 
-    <!-- products section -->
+      <!-- products section -->
 
       <div class="container__flex grid">
         <div class="container__flex  container--maxwidth  grid--area">
@@ -121,7 +121,7 @@
             </p>
           </div>
 
-          <!-- hours banner section -->
+          <!-- hours section -->
 
           <div id="hours" class="product__extra--item">
             <p class="extra--item__padding  color--primary">
@@ -136,14 +136,16 @@
 
       </div>
 
-      <!-- footer section -->
-
-      <footer>
-      <p>
-        Copyright Secret Agent Supply Inc.
-      </p>
     </article>
 
+      <!-- footer section -->
+
+      <footer class="footer  color--primary container__flex">
+        <div class="copyright container__flex  container--maxwidth">
+          <p>
+            Copyright Secret Agent Supply Inc.
+          </p>
+        </div>
     </footer>
 
   </body>
