Added tablet responsive design.

--- a/index.html
+++ b/index.html
@@ -45,23 +45,26 @@
 
     <div class="container__flex  color--secondary">
       <ul class="container__flex  container--maxwidth  menu-area">
-        <li class="menu-area__li">
+        <li class="menu-area__li  display--desktop">
           Eyewear
         </li>
-        <li class="menu-area__li">
+        <li class="menu-area__li  display--desktop">
           Apparel
         </li>
-        <li class="menu-area__li">
+        <li class="menu-area__li  display--desktop">
           Gadgets
         </li>
-        <li class="menu-area__li">
+        <li class="menu-area__li  display--desktop">
           Vehicles
         </li>
-        <li class="menu-area__li">
+        <li class="menu-area__li  display--desktop">
           Glasses
         </li>
-        <li class="menu-area__li">
+        <li class="menu-area__li  display--desktop">
           Contact
+        </li>
+        <li class="menu-area__li  display--mobile">
+          Menu
         </li>
       </ul>
     </div>
@@ -70,12 +73,12 @@
 
       <!-- products section -->
 
-      <div class="container__flex grid">
-        <div class="container__flex  container--maxwidth  grid--area">
+      <div class="vb1 container__flex grid">
+        <div class="vb2 container__flex  container--maxwidth  grid--area">
 
           <div class="container__block  grid__product">
-            <img title="Exploding Pen" alt="pen"
-            class="product__img"
+            <img class="product__img"
+              title="Exploding Pen" alt="pen"
               src="./resources/images/pen.png"
             />
             <p class="product__description color--primary">
@@ -84,8 +87,8 @@
           </div>
 
           <div class="container__block  grid__product">
-            <img title="Cellular Watch" alt="watch"
-              class="product__img"
+            <img class="product__img"
+              title="Cellular Watch" alt="watch"
               src="./resources/images/watch.png"
             />
             <p class="product__description color--primary">
@@ -94,8 +97,8 @@
           </div>
 
           <div class="container__block  grid__product">
-            <img title="Thermal Glasses" alt="glasses"
-              class="product__img  img--small"
+            <img class="product__img  img--small"
+              title="Thermal Glasses" alt="glasses"
               src="./resources/images/glasses.png"
             />
             <p class="product__description  color--primary">
