Mobile responsive added.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <title>Secret Agent Supply Inc</title>
     <link rel="stylesheet" type="text/css" href="./resources/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./resources/css/visiborder.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./resources/css/visiborder.css"> -->
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
 
@@ -63,7 +64,7 @@
         <li class="menu-area__li  display--desktop">
           Contact
         </li>
-        <li class="menu-area__li  display--mobile">
+        <li class="menu-area__li  display--mobileplus">
           Menu
         </li>
       </ul>
@@ -86,7 +87,7 @@
             </p>
           </div>
 
-          <div class="container__block  grid__product">
+          <div class="container__block  grid__product display--mobile">
             <img class="product__img"
               title="Cellular Watch" alt="watch"
               src="./resources/images/watch.png"
@@ -96,7 +97,7 @@
             </p>
           </div>
 
-          <div class="container__block  grid__product">
+          <div class="container__block  grid__product display--mobile">
             <img class="product__img  img--small"
               title="Thermal Glasses" alt="glasses"
               src="./resources/images/glasses.png"
